# SimpleCUDA

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  environment.yml
.github/workflows/: build.yml  format-check.yml
content/block-reduce/: README.md  block-reduce-v0.cu  block-reduce-v1.cu  block-reduce-v2.cu  block-reduce-v3.cu  block-reduce-v4.cu  main.cu  utils.cu
content/dot-product/: dot-product.cu  dot-product.py
content/elementwise-add/: elementwise-add.cu  elementwise-add.py
content/softmax/: README.md  main.cu  softmax-v1.cu  softmax-v2.cu  softmax-v3.cu  softmax-v4.cu  softmax-v5.cu  softmax-v6.cu  softmax-v7.cu  softmax_v1.cuh  softmax_v1.h  softmax_v2.cuh  softmax_v2.h  softmax_v3.h  softmax_v4.cuh  softmax_v4.h  softmax_v5.h  utils.cu  utils.cuh  utils.h
